# streamlit-dnd

./: .gitignore  FORUM_POST.md  GUIDE.md  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: publish.yml
probe/: dump_dom.py  probe2.py  probe3.py  probe_app.py  probe_edge_app.py  probe_iframe_app.py
probe/probe_component/: index.html
streamlit_dnd/: __init__.py
streamlit_dnd/frontend/: index.html  main.js  streamlit-protocol.js
tests/: e2e_demo.py  e2e_ghost.py  e2e_module.py  e2e_persistence.py  minimal_app.py  test_apply_move.py
