[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-dnd"
version = "0.1.1"
description = "Drag-and-drop reordering for the children of Streamlit containers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Anas Bouzid", email = "anasbouzid@gmail.com" }]
keywords = ["streamlit", "streamlit-component", "drag-and-drop", "dnd", "reorder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["streamlit>=1.58"]

[project.urls]
Homepage = "https://github.com/bouzidanas/streamlit-dnd"
Repository = "https://github.com/bouzidanas/streamlit-dnd"
Issues = "https://github.com/bouzidanas/streamlit-dnd/issues"

[tool.setuptools.packages.find]
include = ["streamlit_dnd*"]

[tool.setuptools.package-data]
streamlit_dnd = ["frontend/*"]
